--- a/src/components/Header/__menu-dark/header__menu-dark.css
+++ b/src/components/Header/__menu-dark/header__menu-dark.css
@@ -1,5 +1,5 @@
 @media (max-width: 510px) {
-    header__menu-dark {
+    .header__menu-dark {
     background-image: url(../../../images/menudark.svg);
     width: 24px;
     height: 24px;
