--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -16,5 +16,6 @@
     color: white;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
+    z-index: 1;
   }
 }
