--- a/src/components/PopupWithForm/__close/popup__close.css
+++ b/src/components/PopupWithForm/__close/popup__close.css
@@ -15,3 +15,9 @@
 .popup__close:hover {
   cursor: pointer;
 }
+
+@media (max-width: 510px) {
+  .popup__close {
+    left: 85%;
+  }
+}
